# imc_ros_bridge

./: CMakeLists.txt  package.xml
imc_ros_bridge/: CMakeLists.txt  README.md  package.xml
imc_ros_bridge/include/imc_ros_bridge/: imc_ros_bridge_server.hpp
imc_ros_bridge/include/imc_ros_bridge/imc_to_ros/: Abort.h  Heartbeat.h  PlanControl.h  PlanDB.hpp
imc_ros_bridge/include/imc_ros_bridge/ros_to_imc/: DesiredHeading.hpp  DesiredHeadingRate.hpp  DesiredPitch.h  DesiredRoll.h  DesiredSpeed.hpp  DesiredZ.hpp  EstimatedState.hpp  Goto.h  Heartbeat.h  PlanControlState.h  PlanDB.hpp  RemoteState.hpp  SonarData.hpp  VehicleState.hpp
imc_ros_bridge/launch/: bridge.launch
imc_ros_bridge/src/: bridge_node.cpp  imc_handle.cpp  udp_link.cpp
imc_ros_bridge/src/imc_to_ros/: Heartbeat.cpp  PlanControl.cpp  PlanDB.cpp
imc_ros_bridge/src/ros_to_imc/: DesiredHeading.cpp  DesiredHeadingRate.cpp  DesiredPitch.cpp  DesiredRoll.cpp  DesiredSpeed.cpp  DesiredZ.cpp  EstimatedState.cpp  Goto.cpp  GpsFix.cpp  GpsNavData.cpp  PlanControlState.cpp  PlanDB.cpp  RemoteState.cpp  SonarData.cpp  VehicleState.cpp
include/imc_ros_bridge/: imc_ros_bridge_server.hpp
include/imc_ros_bridge/imc_to_ros/: Goto.h  PlanControl.h  PlanDB.hpp
include/imc_ros_bridge/ros_to_imc/: DesiredHeading.hpp  DesiredHeadingRate.hpp  DesiredPitch.h  DesiredRoll.h  DesiredSpeed.hpp  DesiredZ.hpp  EstimatedState.hpp  GpsFix.h  GpsNavData.h  PlanControlState.h  PlanDB.hpp  RemoteState.hpp  SonarData.hpp  VehicleState.hpp
install/: local_setup.sh  setup.sh
install/imc_ros_bridge/share/imc_ros_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/imc_ros_msgs/include/imc_ros_msgs/imc_ros_msgs/msg/: desired_heading.h  desired_heading.hpp  desired_heading_rate.h  desired_heading_rate.hpp  desired_pitch.hpp  desired_roll.h  desired_z.h  desired_z.hpp  plan_control.h  plan_control_state.h  plan_db.h  plan_db.hpp  plan_db_information.h  plan_db_information.hpp  plan_db_state.h  polygon_vertex.hpp  remote_state.h  remote_state.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  sonar_data.hpp  vehicle_state.h  vehicle_state.hpp
install/imc_ros_msgs/include/imc_ros_msgs/imc_ros_msgs/msg/detail/: desired_heading__functions.c  desired_heading__rosidl_typesupport_fastrtps_c.h  desired_heading__rosidl_typesupport_fastrtps_cpp.hpp  desired_heading__rosidl_typesupport_introspection_cpp.hpp  desired_heading__struct.h  desired_heading__struct.hpp  desired_heading__traits.hpp  desired_heading__type_support.c  desired_heading_rate__builder.hpp  desired_heading_rate__functions.c  desired_heading_rate__rosidl_typesupport_fastrtps_cpp.hpp  desired_heading_rate__struct.h  desired_heading_rate__struct.hpp  desired_heading_rate__traits.hpp  desired_heading_rate__type_support.c  desired_pitch__functions.h  desired_pitch__rosidl_typesupport_fastrtps_c.h  desired_pitch__rosidl_typesupport_introspection_c.h  desired_pitch__struct.h  desired_pitch__type_support.c  desired_roll__functions.h  desired_roll__rosidl_typesupport_fastrtps_c.h  desired_roll__rosidl_typesupport_fastrtps_cpp.hpp  desired_roll__rosidl_typesupport_introspection_c.h  desired_roll__rosidl_typesupport_introspection_cpp.hpp  desired_roll__struct.h  desired_roll__traits.hpp  desired_roll__type_support.cpp  desired_roll__type_support.h  desired_speed__functions.c  desired_speed__rosidl_typesupport_introspection_c.h  desired_speed__rosidl_typesupport_introspection_cpp.hpp  desired_speed__type_support.c  desired_speed__type_support.cpp  desired_speed__type_support.h  desired_z__functions.c  desired_z__rosidl_typesupport_fastrtps_c.h  desired_z__rosidl_typesupport_introspection_c.h  desired_z__traits.hpp  desired_z__type_support.c  (+82 more)
install/imc_ros_msgs/local/lib/python3.10/dist-packages/imc_ros_msgs/: _imc_ros_msgs_s.ep.rosidl_typesupport_c.c  _imc_ros_msgs_s.ep.rosidl_typesupport_introspection_c.c
install/imc_ros_msgs/local/lib/python3.10/dist-packages/imc_ros_msgs-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/imc_ros_msgs/local/lib/python3.10/dist-packages/imc_ros_msgs/msg/: _desired_heading.py  _desired_heading_rate.py  _desired_heading_s.c  _desired_pitch.py  _desired_roll.py  _desired_roll_s.c  _desired_speed.py  _desired_speed_s.c  _desired_z.py  _desired_z_s.c  _plan_control.py  _plan_control_s.c  _plan_db.py  (+12 more)
install/imc_ros_msgs/share/imc_ros_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/imc_ros_msgs/share/imc_ros_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_imc_ros_msgs__rosidl_generator_cExport.cmake  export_imc_ros_msgs__rosidl_generator_cppExport.cmake  export_imc_ros_msgs__rosidl_generator_pyExport-noconfig.cmake  export_imc_ros_msgs__rosidl_generator_pyExport.cmake  export_imc_ros_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_imc_ros_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_imc_ros_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  imc_ros_msgsConfig.cmake  imc_ros_msgs__rosidl_typesupport_cExport-noconfig.cmake  imc_ros_msgs__rosidl_typesupport_cExport.cmake  imc_ros_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  imc_ros_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/imc_ros_msgs/share/imc_ros_msgs/msg/: DesiredHeading.idl  DesiredPitch.idl  DesiredSpeed.idl  DesiredZ.idl  Maneuver.idl  PlanControl.idl  PlanControlState.idl  PlanDBState.idl  PlanManeuver.idl  SonarData.idl
launch/: bridge.launch
log/: latest_build
src/: bridge_node.cpp  imc_handle.cpp  udp_link.cpp
src/imc_to_ros/: Abort.cpp  Goto.cpp  PlanControl.cpp  PlanDB.cpp
src/ros_to_imc/: DesiredHeading.cpp  DesiredHeadingRate.cpp  DesiredPitch.cpp  DesiredRoll.cpp  DesiredSpeed.cpp  DesiredZ.cpp  EstimatedState.cpp  Heartbeat.cpp  PlanControlState.cpp  PlanDB.cpp  RemoteState.cpp  SonarData.cpp  VehicleState.cpp
